# neo4j-databricks-etl

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DBX_PORT_v2.md  EXPLORING_DATA.md  IMPLEMENTATION_COMPLETE.md  LICENSE.md  NOTICE.md  PROPOSED_BLOG_OVERVIEW.md  PROPOSED_BLOG_TECHNICAL.md  README.md  TEXT2CYPHER_PROPOSAL.md
agents/: .env.example  README.md  pyproject.toml  query_neo4j.py
datasets/: README.md
labs/: 0 - Required Setup.ipynb  0 - Required Setup.py  1 - Load London Transport.ipynb  1 - Load London Transport.py  2 - Query London Transport.ipynb  2 - Query London Transport.py
labs/Includes/: config.yaml
labs/Includes/_lib/: london_transport_import.ipynb  london_transport_import.py  setup_orchestrator.ipynb  setup_orchestrator.py
notebooks/: load_london_transport.ipynb  query_london_transport (1).ipynb  query_london_transport.ipynb
